# sliding_counter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bit_array.c  bit_array.h  sliding_counter.c  sliding_counter.h
test/: CMakeLists.txt  test_bit_array.c  test_sliding_counter.c
